# roadie

./: Dockerfile  README.md  app.py  config.template.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.lutedata/: README.md  _gen_lute_config.yml  lute.db
js/: package-lock.json
lutestubs/: README.md  pyproject.toml
lutestubs/src/lutestubs/: __init__.py
roadie/: app_factory.py  routes.py  test.py  vite.py
roadie/override/: __init__.py  override.py
roadie/read/: routes.py
roadie/templates/overrides/: base.html
src/: Anki.js  BookExtractor.js  Components.js  ReaderAugment.js  backend.js  main.js  style.css  twind.config.js  yomitan.js
src/roadie/: patches.py
src/roadie/read/: routes.py
src/roadie/static/: styles.css
src/types/: BookExtractor.d.ts  backend.d.ts
src/types/yomitan/: anki.d.ts  core.d.ts  input.d.ts  settings.d.ts
test/: BookExtractor.spec.js
test/fixtures/: read.html  renderpage.html
typings/lute/: __init__.pyi  app_factory.pyi  main.pyi
typings/lute/backup/: routes.pyi  service.pyi
typings/lute/bing/: routes.pyi
typings/lute/book/: datatables.pyi  forms.pyi  model.pyi  routes.pyi  service.pyi  stats.pyi
typings/lute/bookmarks/: datatables.pyi  routes.pyi
typings/lute/cli/: commands.pyi  language_term_export.pyi
typings/lute/config/: app_config.pyi
typings/lute/db/: __init__.pyi  data_cleanup.pyi  demo.pyi  management.pyi
typings/lute/dev_api/: routes.pyi
typings/lute/language/: forms.pyi  routes.pyi  service.pyi
(+38 files in other folders)
