[project]
name = "roadie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lute3>=3.5.2",
    "lutestubs",
    "wrapt>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
]

[tool.uv.workspace]
members = ["lutestubs"]

[tool.uv.sources]
lutestubs = { workspace = true }
